<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/preference_header">

        <Preference
            app:iconSpaceReserved="false"
            app:key="package_select"
            app:title="@string/title_package_select" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="proxy"
            app:summaryOff="@string/proxy_summary_off"
            app:summaryOn="@string/proxy_summary_on"
            app:title="@string/title_proxy_enable" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="web_debug"
            app:summaryOff="@string/web_debug_summary_off"
            app:summaryOn="@string/web_debug_summary_on"
            app:title="@string/title_web_debug" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="js_alert"
            app:summaryOff="@string/js_alert_summary_off"
            app:summaryOn="@string/js_alert_summary_on"
            app:title="@string/title_js_alert" />

    </PreferenceCategory>

</PreferenceScreen>